# chord2mml-rust

./: .gitignore  Cargo.toml  EXAMPLES.md  IMPLEMENTATION.md  README.ja.md  README.md  _config.yml  for_local.bat
.github/: AGENT_OPERATIONAL_GUIDELINES.md  PR28_RECOVERY_PROPOSAL.md  copilot-instructions.md
.github/workflows/: deploy-pages.yml  rust-test.yml
chord2mml-cli/: Cargo.toml  README.md
chord2mml-cli/src/: main.rs
chord2mml-core/: Cargo.toml
chord2mml-core/examples/: basic.rs
chord2mml-core/src/: ast.rs  ast2ast.rs  ast2notes.rs  cst_to_ast.rs  lib.rs  lib.rs.backup  mml.rs  note.rs  notes2mml.rs  parser.rs  preprocess.rs
chord2mml-core/tests/: corpus.rs
chord2mml-core/tests/corpus/: bars-degrees-keys.json  basic.json  inline-midi-tempo.json  inversions.json  modifiers.json  preprocess.json  rust-extensions.json  tensions.json  voicings.json
chord2mml-wasm/: Cargo.toml
chord2mml-wasm/src/: lib.rs
chord2mml-web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
chord2mml-web/scripts/: copy-libs.js
chord2mml-web/src/: convert.js  cst-serializer.js  main.ts
chord2mml-web/test/: browser-test.mjs  wasm-path-test.mjs
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 11.md  13.md  15.md  17.md  19.md  2.md  20.md  21.md  22.md  27.md  29.md  5.md  7.md  9.md
scripts/: verify-corpus-vs-js.mjs
tree-sitter-chord/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-chord  tree-sitter-chord.wasm
tree-sitter-chord/bindings/node/: binding.cc  index.js
tree-sitter-chord/bindings/rust/: build.rs  lib.rs
tree-sitter-chord/src/: grammar.json  node-types.json  parser.c
