[package]
name = "chord2mml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for converting chord notation to MML (Music Macro Language)"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tree-sitter = "0.20"
tree-sitter-chord = { path = "../tree-sitter-chord" }

[dev-dependencies]
